--- a/source/sass/fonts.scss
+++ b/source/sass/fonts.scss
@@ -1,20 +1,29 @@
 @font-face {
-  font-family: "Open Sans";
   font-weight: 400;
+  font-family: "Open Sans";
   font-style: normal;
+
+  font-display: swap;
+  src: local("Open Sans");
   src: url("../fonts/opensans.woff2") format("woff2"), url("../fonts/opensans.woff") format("woff");
 }
 
 @font-face {
-  font-family: "Open Sans";
   font-weight: 300;
+  font-family: "Open Sans";
   font-style: normal;
+
+  font-display: swap;
+  src: local("Open Sans");
   src: url("../fonts/opensanslight.woff2") format("woff2"), url("../fonts/opensanslight.woff") format("woff");
 }
 
 @font-face {
-  font-family: "Open Sans";
   font-weight: 700;
+  font-family: "Open Sans";
   font-style: normal;
+
+  font-display: swap;
+  src: local("Open Sans");
   src: url("../fonts/opensansbold.woff2") format("woff2"), url("../fonts/opensansbold.woff") format("woff");
 }
