--- a/source/sass/general/page-header.scss
+++ b/source/sass/general/page-header.scss
@@ -1,35 +1,102 @@
 .page-header {
   background-color: transparent;
+
+  @media (min-width: $desktop-width) {
+    display: flex;
+    flex-direction: column;
+  }
 }
 
 .page-header__bg-nav-wrapper {
   width: 100%;
   min-height: 67px;
-
   background-color: rgba(0, 0, 0, 0.5);
+
+  @media (min-width: $tablet-width) {
+    min-height: 109px;
+  }
+}
+
+.page-header__nav-wrapper {
+  @media (min-width: $desktop-width) {
+    display: flex;
+    justify-content: space-between;
+  }
 }
 
 .page-header__panel {
+  height: 70px;
+  background-color: $main-color;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 70px;
 
-  background-color: $main-color;
+  &--menu-closed {
+    background-color: transparent;
+
+    .page-header__toggle {
+      width: 50px;
+      height: 24px;
+
+      .page-header__toggle-icon--burger {
+        color: white;
+        width: 50px;
+        top: 0;
+        left: 0;
+      }
+
+      .page-header__toggle-icon--cross {
+        color: transparent;
+      }
+    }
+
+    .page-header__toggle:hover {
+      .page-header__toggle-icon--burger {
+        color: $violet-color;
+      }
+
+      .page-header__toggle-icon--cross {
+        color: transparent;
+      }
+    }
+
+    .page-header__toggle:active {
+      .page-header__toggle-icon--burger {
+        color: rgba(255, 255, 255, 0.3);
+      }
+
+      .page-header__toggle-icon--cross {
+        color: transparent;
+      }
+    }
+  }
+
+  @media (min-width: $tablet-width) {
+    height: 108px;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 160px;
+  }
+
+  @media (min-width: $desktop-width) {
+    background-color: transparent;
+  }
 }
 
 .page-header__toggle {
+  height: 24px;
+  width: 24px;
+  margin-right: 20px;
+  color: white;
+  background-color: transparent;
+  cursor: pointer;
+  border: none;
   position: relative;
 
-  width: 24px;
-  height: 24px;
-  margin-right: 20px;
-
-  color: white;
-
-  background-color: transparent;
-  border: none;
-  cursor: pointer;
+  @media (min-width: $desktop-width) {
+    display: none;
+  }
 }
 
 .page-header__toggle-icon {
@@ -39,9 +106,8 @@
 }
 
 .page-header__toggle-icon--burger {
-  width: 24px;
-
   color: transparent;
+  width: 24px;
 }
 
 .page-header__toggle-icon--cross {
@@ -71,6 +137,11 @@
 .page-header__logo {
   height: 70px;
   margin-left: 20px;
+
+  @media (min-width: $desktop-width) {
+    margin-left: 10px;
+    width: 150px;
+  }
 }
 
 .page-header__logo-image {
@@ -83,20 +154,83 @@
   &:active {
     color: rgba(255, 255, 255, 0.3);
   }
+
+  @media (max-width: $mobile-width-only) {
+    &--mobile {
+      padding-top: 20px;
+      width: 74px;
+      height: 23px;
+    }
+
+    &--tablet,
+    &--desktop {
+      display: none;
+    }
+  }
+
+  @media (min-width: $tablet-width) {
+    &--tablet {
+      padding-top: 6px;
+      width: 147px;
+      height: 41px;
+    }
+
+    &--mobile,
+    &--desktop {
+      display: none;
+    }
+  }
+
+  @media (min-width: $desktop-width) {
+    &--desktop {
+      display: block;
+      padding-top: 6px;
+      width: 147px;
+      height: 41px;
+    }
+
+    &--tablet,
+    &--mobile {
+      display: none;
+    }
+  }
 }
 
 .page-header__title {
-  @include text-value(24px, 28px, 300, white);
-
-  width: 180px;
   margin: 0 auto;
+  width: 180px;
   padding-top: 30px;
   padding-bottom: 84px;
 
+  @include text-value(24px, 28px, 300, white);
   text-align: center;
 
   &--form {
     width: 240px;
     padding-bottom: 56px;
+  }
+
+  @media (min-width: $tablet-width) {
+    width: 370px;
+    font-size: 50px;
+    line-height: 60px;
+    padding-top: 70px;
+    padding-bottom: 140px;
+
+    &--form {
+      width: 500px;
+      padding-bottom: 80px;
+    }
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-top: 65px;
+    padding-bottom: 100px;
+
+    &--form {
+      width: 750px;
+      padding-top: 65px;
+      padding-bottom: 100px;
+    }
   }
 }
