--- a/source/sass/photo/gallery.scss
+++ b/source/sass/photo/gallery.scss
@@ -4,11 +4,49 @@
   flex-direction: column;
   margin: auto;
   padding: 0 20px;
+
+  @media (min-width: $tablet-width) {
+    max-width: $tablet-width;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+
+  @media (min-width: $desktop-width) {
+    max-width: $desktop-width;
+    padding: 0;
+  }
 }
 
 .gallery__item {
   width: 280px;
   padding-bottom: 21px;
+
+  @media (min-width: $tablet-width) {
+    width: 300px;
+    padding-bottom: 20px;
+    display: flex;
+    flex-direction: column;
+
+    &--panorama {
+      width: 100%;
+      margin-bottom: 50px;
+      padding-bottom: 0;
+    }
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-bottom: 52px;
+    padding: 0 10px;
+
+    &--panorama {
+      width: 100%;
+      margin: 0 auto;
+      margin-bottom: 50px;
+      padding: 0;
+    }
+  }
 }
 
 .gallery__img-wrapper {
@@ -40,6 +78,16 @@
   max-width: 80%;
   box-sizing: border-box;
   z-index: 2;
+
+  @media (min-width: $tablet-width) {
+    top: 60px;
+    right: 40px;
+  }
+
+  @media (min-width: $desktop-width) {
+    top: 55px;
+    right: 130px;
+  }
 }
 
 .gallery__img {
@@ -47,4 +95,30 @@
   height: 180px;
   display: block;
   background-color: $gray-color;
+
+  @media (min-width: $tablet-width) {
+    max-width: 300px;
+    height: 300px;
+  }
+
+  @media (min-width: $desktop-width) {
+    height: 400px;
+  }
+
+  &--panorama {
+    position: relative;
+    height: 137px;
+    max-width: none;
+    background-color: $body-color;
+    z-index: 1;
+
+    @media (min-width: $tablet-width) {
+      height: 509px;
+      width: auto;
+    }
+
+    @media (min-width: $desktop-width) {
+      height: 507px;
+    }
+  }
 }
