Подключение стилевых блоков

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -3,3 +3,22 @@
 @import "variables";
 @import "mixin";
 @import "scaffolding";
+@import "general/page-header";
+@import "general/main-nav";
+@import "general/page-main";
+@import "general/page-footer";
+@import "general/social";
+@import "general/copyright";
+@import "index/downloads";
+@import "index/features";
+@import "index/timer";
+@import "index/reviews";
+@import "index/tariffs";
+@import "index/controls";
+@import "index/contacts";
+@import "photo/gallery";
+@import "photo/post";
+@import "photo/upload";
+@import "photo/editor";
+@import "form/contest";
+@import "form/modal";
